# kminder

./: .env.example  .gitignore  README.md  compose.yaml  services_history.yaml
app/: Dockerfile  pyproject.toml  services.yaml
app/starline/: __main__.py  models.py  settings.py  starline_api.py  starline_data.py
app/templates/: base.html  history.html  index.html
nginx/: default.conf
